<resources>
    <string name="app_name">LaundryWebTask</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_order">New Order</string>
    <string name="orders">Orders</string>
    <string name="about_us">About us</string>
    <string name="how_it_works">How it works</string>
    <string name="contact_us">Contact us</string>
    <string name="my_account">My Account</string>
    <string name="laundry_comes_home">Laundry Comes Home</string>
</resources>