<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_item_orders"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_home_item"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_orders"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/orders_item_icon"
        app:layout_constraintBottom_toBottomOf="@id/view_item_orders"
        app:layout_constraintStart_toStartOf="@id/view_item_orders"
        app:layout_constraintTop_toTopOf="@id/view_item_orders" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/orders"
        android:textAllCaps="true"
        android:textColor="@color/app_dark_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_orders"
        app:layout_constraintStart_toEndOf="@id/iv_orders"
        app:layout_constraintTop_toTopOf="@id/iv_orders" />

    <View
        android:id="@+id/view_orders_continue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fab_custom"
        android:backgroundTint="@color/app_dark_blue"
        app:layout_constraintBottom_toBottomOf="@id/view_item_orders"
        app:layout_constraintEnd_toEndOf="@id/view_item_orders"
        app:layout_constraintTop_toTopOf="@id/view_item_orders" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="@id/view_orders_continue"
        app:layout_constraintEnd_toEndOf="@id/view_orders_continue"
        app:layout_constraintStart_toStartOf="@id/view_orders_continue"
        app:layout_constraintTop_toTopOf="@id/view_orders_continue"
        app:tint="@color/app_light_blue" />

    <View
        android:id="@+id/view_item_how_works"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_home_item"
        android:backgroundTint="@color/app_dark_blue"
        app:layout_constraintTop_toBottomOf="@id/view_item_orders" />

    <ImageView
        android:id="@+id/iv_how_works"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/how_it_works"
        app:layout_constraintBottom_toBottomOf="@id/view_item_how_works"
        app:layout_constraintStart_toStartOf="@id/view_item_how_works"
        app:layout_constraintTop_toTopOf="@id/view_item_how_works" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/how_it_works"
        android:textAllCaps="true"
        android:textColor="@color/app_light_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_how_works"
        app:layout_constraintStart_toEndOf="@id/iv_how_works"
        app:layout_constraintTop_toTopOf="@id/iv_how_works" />

    <View
        android:id="@+id/view_how_works_continue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fab_custom"
        android:backgroundTint="@color/app_light_blue"
        app:layout_constraintBottom_toBottomOf="@id/view_item_how_works"
        app:layout_constraintEnd_toEndOf="@id/view_item_how_works"
        app:layout_constraintTop_toTopOf="@id/view_item_how_works" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="@id/view_how_works_continue"
        app:layout_constraintEnd_toEndOf="@id/view_how_works_continue"
        app:layout_constraintStart_toStartOf="@id/view_how_works_continue"
        app:layout_constraintTop_toTopOf="@id/view_how_works_continue"
        app:tint="@color/app_dark_blue" />

    <View
        android:id="@+id/view_item_about_us"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_home_item"
        app:layout_constraintTop_toBottomOf="@id/view_item_how_works" />

    <ImageView
        android:id="@+id/iv_about_us"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/about_us"
        app:layout_constraintBottom_toBottomOf="@id/view_item_about_us"
        app:layout_constraintStart_toStartOf="@id/view_item_about_us"
        app:layout_constraintTop_toTopOf="@id/view_item_about_us" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/about_us"
        android:textAllCaps="true"
        android:textColor="@color/app_dark_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_about_us"
        app:layout_constraintStart_toEndOf="@id/iv_about_us"
        app:layout_constraintTop_toTopOf="@id/iv_about_us" />

    <View
        android:id="@+id/view_about_us_continue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fab_custom"
        android:backgroundTint="@color/app_dark_blue"
        app:layout_constraintBottom_toBottomOf="@id/view_item_about_us"
        app:layout_constraintEnd_toEndOf="@id/view_item_about_us"
        app:layout_constraintTop_toTopOf="@id/view_item_about_us" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="@id/view_about_us_continue"
        app:layout_constraintEnd_toEndOf="@id/view_about_us_continue"
        app:layout_constraintStart_toStartOf="@id/view_about_us_continue"
        app:layout_constraintTop_toTopOf="@id/view_about_us_continue"
        app:tint="@color/app_light_blue" />

    <View
        android:id="@+id/view_item_contact_us"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_home_item"
        android:backgroundTint="@color/app_dark_blue"
        app:layout_constraintTop_toBottomOf="@id/view_item_about_us" />

    <ImageView
        android:id="@+id/iv_contact_us"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/contact_us"
        app:layout_constraintBottom_toBottomOf="@id/view_item_contact_us"
        app:layout_constraintStart_toStartOf="@id/view_item_contact_us"
        app:layout_constraintTop_toTopOf="@id/view_item_contact_us" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/contact_us"
        android:textAllCaps="true"
        android:textColor="@color/app_light_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_contact_us"
        app:layout_constraintStart_toEndOf="@id/iv_contact_us"
        app:layout_constraintTop_toTopOf="@id/iv_contact_us" />

    <View
        android:id="@+id/view_contact_us_continue"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/fab_custom"
        android:backgroundTint="@color/app_light_blue"
        app:layout_constraintBottom_toBottomOf="@id/view_item_contact_us"
        app:layout_constraintEnd_toEndOf="@id/view_item_contact_us"
        app:layout_constraintTop_toTopOf="@id/view_item_contact_us" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
        app:layout_constraintBottom_toBottomOf="@id/view_contact_us_continue"
        app:layout_constraintEnd_toEndOf="@id/view_contact_us_continue"
        app:layout_constraintStart_toStartOf="@id/view_contact_us_continue"
        app:layout_constraintTop_toTopOf="@id/view_contact_us_continue"
        app:tint="@color/app_dark_blue" />

</androidx.constraintlayout.widget.ConstraintLayout>